--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.2",
+    "lodash": "^4.17.5",
     "mongodb": "^3.0.4",
     "mongoose": "^5.0.9"
   },
