--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "author": "Ahmed dessouki",
   "license": "ISC",
   "dependencies": {
+    "crypto-js": "^3.1.9-1",
     "express": "^4.16.2",
     "lodash": "^4.17.5",
     "mongodb": "^3.0.4",
-    "mongoose": "^5.0.9"
+    "mongoose": "^5.0.9",
+    "validator": "^9.4.1"
   },
   "devDependencies": {
     "nodemon": "^1.17.1"
